--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   "plugins": ["react", "react-hooks", "@typescript-eslint"],
   "rules": {
     "prettier/prettier": "error",
+    "enforceDynamicLinks": "off",
     "react/jsx-one-expression-per-line": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
